--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://nickplayfair.co.uk" # the base hostname & protocol for your site
 twitter_username: nplayfair
 github_username:  nplayfair
+timezone: Europe/London
 
 # Build settings
 markdown: kramdown
